update column spacing. Fix back to top styling

--- a/blocks/columns/columns.scss
+++ b/blocks/columns/columns.scss
@@ -1,34 +1,23 @@
-// // stylelint-disable
-// .columns > div {
-// 	display: flex;
-// 	flex-direction: column;
-// }
+@use '../../styles/ne-global-imports' as *;
 
-// .columns img {
-// 	width: 100%;
-// }
+.columns {
+	margin-bottom: units($component-spacing);
 
-// .columns > div > div {
-// 	order: 1;
-// }
-
-// .columns > div > .columns-img-col {
-// 	order: 0;
-// }
-
-// .columns > div > .columns-img-col img {
-// 	display: block;
-// }
-
-// @media (width >= 900px) {
-// 	.columns > div {
-// 		align-items: center;
-// 		flex-direction: unset;
-// 		gap: 24px;
-// 	}
-
-// 	.columns > div > div {
-// 		flex: 1;
-// 		order: unset;
-// 	}
-// }
+	&__grid-row {
+		margin-bottom: units($theme-site-margins-mobile-width * -1)
+	}
+	
+	&__grid-col {
+		margin-bottom: units($theme-site-margins-mobile-width)
+	}
+	
+	@include at-media('desktop') {
+		&__grid-row {
+			margin-bottom: units($theme-site-margins-width * -1)
+		}
+		
+		&__grid-col {
+			margin-bottom: units($theme-site-margins-width)
+		}
+	}
+}
