--- a/blocks/footer-navigation/footer-navigation.scss
+++ b/blocks/footer-navigation/footer-navigation.scss
@@ -71,6 +71,19 @@
 			
 			a {
 				text-decoration: none;
+				
+				&:hover {
+					text-decoration: underline;
+				}
+				
+				&:hover,
+				&:focus {
+					color: color('primary-dark');
+				}
+				
+				&:focus-visible {
+					outline-offset: units(0.5);
+				}
 			}
 		}
 		
